--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "my-app",
   "version": "0.2.0",
-  "author": "Your Name",
+  "author": "Noel OOsiroOsirosiroOsiro",
   "description": "React-TypeScript-Electron sample with Create React App and Electron Builder",
   "homepage": ".",
   "main": "build/electron/main.js",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^2.5.2",
+    "@chakra-ui/system": "^1.12.1",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@tanstack/react-table": "^8.5.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -15,11 +23,22 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "apexcharts": "^3.35.2",
     "electron-devtools-installer": "^3.2.0",
     "electron-reload": "^1.5.0",
+    "framer-motion": "^10.6.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-calendar": "^3.7.0",
+    "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^12.0.4",
+    "react-icons": "^4.3.1",
+    "react-is": "^18.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "2.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.1.1"
   },
@@ -30,7 +49,9 @@
     "postinstall": "electron-builder install-app-deps",
     "electron:dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://127.0.0.1:3000 && tsc -p electron -w\" \"wait-on http://127.0.0.1:3000 && tsc -p electron && electron .\"",
     "electron:build": "yarn build && tsc -p electron && electron-builder",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "build": {
     "extends": null,
@@ -60,10 +81,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@testing-library/dom": "^9.0.1",
+    "@types/react-calendar": "^3.5.2",
+    "@types/react-router-dom": "^5.3.3",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "electron": "^23.1.0",
     "electron-builder": "^23.6.0",
+    "gh-pages": "^3.2.3",
     "wait-on": "^7.0.1"
   }
 }
